added missed references for my dissertation

--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -29,6 +29,20 @@
     volume = {7313},
     doi = {10.1007/978-3-642-31057-7_6}
 }
+
+@Misc{feilmeier,
+    author = {Stefan Feilmeier},
+    title = {Loads management based on Photovoltaic and Energy Storage System},
+    date = {2015},
+}
+
+
+@Misc{oxfordForecast,
+    author = {Oxford University Press},
+    title = Definition of forecast in English},
+    note = {\url{https://en.oxforddictionaries.com/definition/forecast}, Accessed December 2018},
+}
+
 @Misc{retarget,
 author = {Erich Styger},
 title = {printf() and scanf() with {GNU ARM Libraries}},
